--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="/css/navonly.css">
 
 </head> 
-<body>    
+<body>
+  
+  <%- include('import/header')%>
 
   <nav class="navbar navbar-expand-lg flex-nowrap px-md-5" id="main-navbar">
     <img src="/images/icons/logo kotkup.png" alt="Logo" class="responsivelogo">
@@ -85,7 +87,6 @@
     </div>
   </nav>
 
-
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br>
 
@@ -94,8 +95,6 @@
         <a class="navbar-brand mx-auto" href="#" style="font-size: 1.7vw ; font-family:Inter; color: #fff; white-space: break-space">DATA <u>PENDUDUK</u></a>
       </div>
   </nav>
-
-
 
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br>
@@ -108,17 +107,13 @@
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br>
 
-
-
-
-
   <nav class="navbar-2nd navbar-2nd-expand-lg flex-md-nowrap">
     <div class="container-fluid">
       <a class="navbar-brand mx-auto" href="#" style="font-size: 1.7vw ; font-family:Inter; color: #fff; white-space: break-space">PUBLIKASI</a>
     </div>
   </nav>
 
-
+  
   <script src="/library/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.jsf"></script>
   <script src="/library/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
   <script src="/library/bootstrap-5.0.2-dist/js/bootstrap.js"></script>
