--- a/html/Home.html
+++ b/html/Home.html
@@ -30,6 +30,16 @@
       $("#nav-placeholder").replaceWith(data);
     })
   </script>
+
+
+  <div class=""></div>
+
+  <p>Selamat Datang</p>
+  <p>di website kelurahan Cinta  Statistik (Cantik) - wilayah Oetete.</p>
+
+  <p>Website ini dibuat dengan tujuan memvisualisasi data yang ada pada 
+    Kelurahan Oetete agar dapat mempermudah pengunjung untuk mencakup informasi 
+    terkait data penduduk dan juga data UMKM bagi penduduk Kelurahan Oetete.</p>
   
   
 
