--- a/tester.html
+++ b/tester.html
@@ -10,14 +10,9 @@
     
 </head>
 <body>
-    <div id="nav-placeholder">
-
-    </div>
-        <script>
-            $.get("navigation.html", function(data){
-                $("#nav-placeholder").replaceWith(data);
-            });
-        </script> 
-        <p>My main page code</p> 
+    <div class="badge bg-primary text-wrap" style="width: 10rem;">
+        This text should wrap.
+      </div>
+    
 </body>
 </html>
