--- a/tester.html
+++ b/tester.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
     <script src="/library/node_modules/jquery/dist/jquery.min.js"></script>
+    <!-- include bootstrap library -->
+    <link
+      rel="stylesheet"
+      href="/library/bootstrap-5.0.2-dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/library/bootstrap-5.0.2-dist/css/bootstrap-utilities.css"
+    />
+    <link rel="stylesheet" href="/css/HomeIndex.css" />
+    <link
+      rel="stylesheet"
+      href="/library/bootstrap-5.0.2-dist/css/bootstrap.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/library/bootstrap-5.0.2-dist/css/bootstrap-grid.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/library/bootstrap-5.0.2-dist/css/bootstrap-reboot.css"
+    />
+    <link rel="stylesheet" href="/css/navonly.css" />
+
+    <!-- include javascript library -->
+    <script src="/library/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.jsf"></script>
+    <script src="/library/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
+    <script src="/library/bootstrap-5.0.2-dist/js/bootstrap.js"></script>
+    <script src="/library/bootstrap-5.0.2-dist/js/bootstrap.esm.js"></script>
+    <script src="/library/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
+    <script src="/javascript/bootstrap_modify.js"></script>
+  </head>
+  <body>
+    <div class="badge bg-primary text-wrap" style="width: 10rem">
+      This text should wrap.
+    </div>
+
+    <div class="text-nowrap bg-light border" style="width: 8rem">
+      This text should overflow the parent.
+    </div>
     
-</head>
-<body>
-    <div class="badge bg-primary text-wrap" style="width: 10rem;">
-        This text should wrap.
-      </div>
-    
-</body>
+  </body>
 </html>
