i need a cup of coffee.

--- a/html/footer.html
+++ b/html/footer.html
@@ -27,7 +27,7 @@
             <div class="footer-col">
                 <h4>KOLABORASI BERSAMA</h4>
                 <ul>    
-                    <li><a href="#">about us</a></li>
+                    <li><a><img src="" alt=""></a></li>
                     <li><a href="#">our services</a></li>
                     <li><a href="#">privacy policy</a></li>
                     <li><a href="#">affiliate program</a></li>
@@ -35,7 +35,7 @@
             </div>
             <div class="footer-col">
                 <h4>HUBUNGI KAMI</h4>
-                <ul>
+                <ul style="font-family: ">
                     <li><a href="#">+6285384933</a></li>
                     <li><a href="#">KelurahanOetete@gmail.com</a></li>
                     <li><a href="#">Jln.Prof. Dr.W.Z. Johannes</a></li>
