--- a/html/footer.html
+++ b/html/footer.html
@@ -27,19 +27,18 @@
             <div class="footer-col">
                 <h4>KOLABORASI BERSAMA</h4>
                 <ul>    
+                    <li><a><img style="" class=""src="/images/icons/bpslogo.png" alt=""></a></li>
+                    <li><a><img src="/images/icons/chipset_logo.png" alt=""></a></li>
                     <li><a><img src="" alt=""></a></li>
-                    <li><a href="#">our services</a></li>
-                    <li><a href="#">privacy policy</a></li>
-                    <li><a href="#">affiliate program</a></li>
+                    
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>HUBUNGI KAMI</h4>
-                <ul style="font-family: ">
+                <ul style="font-family:'Barlow-Boldk'">
                     <li><a href="#">+6285384933</a></li>
                     <li><a href="#">KelurahanOetete@gmail.com</a></li>
                     <li><a href="#">Jln.Prof. Dr.W.Z. Johannes</a></li>
-                    <li><a href="#">dress</a></li>
                 </ul>
             </div>
             <div class="footer-col">
